part2/overlay/vivado_10657.backup.log
#-----------------------------------------------------------
# Vivado v2020.1 (64-bit)
# SW Build 2902540 on Wed May 27 19:54:35 MDT 2020
# IP Build 2902112 on Wed May 27 22:43:36 MDT 2020
# Start of session at: Mon Mar  1 13:00:01 2021
# Process ID: 10657
# Current directory: /mnt/sdc3/david/projs/hardware-software/part2/overlay
# Command line: vivado -mode batch -source build_hlsip.tcl -notrace
# Log file: /mnt/sdc3/david/projs/hardware-software/part2/overlay/vivado.log
# Journal file: /mnt/sdc3/david/projs/hardware-software/part2/overlay/vivado.jou
#-----------------------------------------------------------
source build_hlsip.tcl -notrace
Skipping building color_convert
Skipping building pixel_pack
Skipping building pixel_unpack
Building pixel_proc IP

****** Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2020.1 (64-bit)
  **** SW Build 2902540 on Wed May 27 19:54:35 MDT 2020
  **** IP Build 2902112 on Wed May 27 22:43:36 MDT 2020
    ** Copyright 1986-2020 Xilinx, Inc. All Rights Reserved.

source /home/david/Xilinx/Vivado/2020.1/scripts/vivado_hls/hls.tcl -notrace
INFO: [HLS 200-10] Running '/home/david/Xilinx/Vivado/2020.1/bin/unwrapped/lnx64.o/vivado_hls'
INFO: [HLS 200-10] For user 'david' on host 'david' (Linux_x86_64 version 6.5.0-14-generic) on Mon Mar 01 13:00:12 CET 2021
INFO: [HLS 200-10] On os Ubuntu 22.04.2 LTS
INFO: [HLS 200-10] In directory '/mnt/sdc3/david/projs/hardware-software/part2/ip_cores'
Sourcing Tcl script 'pixel_proc/script.tcl'
INFO: [HLS 200-10] Opening project '/mnt/sdc3/david/projs/hardware-software/part2/ip_cores/pixel_proc'.
WARNING: [HLS 200-40] No /mnt/sdc3/david/projs/hardware-software/part2/ip_cores/pixel_proc/solution1/solution1.aps file found.
INFO: [HLS 200-10] Adding design file 'pixel_proc/pixel_proc.h' to the project
INFO: [HLS 200-10] Adding design file 'pixel_proc/pixel_proc.cpp' to the project
INFO: [HLS 200-10] Adding test bench file 'pixel_proc/pixel_proc_test.cpp' to the project
INFO: [HLS 200-10] Creating and opening solution '/mnt/sdc3/david/projs/hardware-software/part2/ip_cores/pixel_proc/solution1'.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg400-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 7ns.
INFO: [XFORM 203-1161] The maximum of name length is set into 40.
INFO: [HLS 200-10] Analyzing design file 'pixel_proc/pixel_proc.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from pixel_proc/pixel_proc.cpp:1:
In file included from pixel_proc/pixel_proc.cpp:6:
pixel_proc/pixel_proc.h:131:5: error: use of undeclared identifier 'exit'; did you mean '_exit'?
    exit(1);
    ^~~~
    _exit
/usr/include/unistd.h:624:13: note: '_exit' declared here
extern void _exit (int __status) __attribute__ ((__noreturn__));
            ^
1 error generated.
Failed during preprocessing.
    while executing
"source pixel_proc/script.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel \#0 [list source $arg] "

INFO: [Common 17-206] Exiting vivado_hls at Mon Mar  1 13:00:24 2021...
child process exited abnormally
INFO: [Common 17-206] Exiting Vivado at Mon Mar  1 13:00:24 2021...
